--- a/gold/nb_comparativo.ipynb
+++ b/gold/nb_comparativo.ipynb
@@ -5,34 +5,15 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "46d4a61f-4146-443f-bc9a-10317e2e9a4f",
+     "nuid": "5c70e3fd-7464-44c5-885a-d4d15e1faceb",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
-    },
-    "jupyter": {
-     "outputs_hidden": true
     }
    },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%sql DESCRIBE HISTORY catalog.schema.table"
    ]
